# tiny-ml

./: Cargo.toml  README.md
examples/: bench.rs  bench2.rs  circle.rs  training.rs
src/: lib.rs
src/networks/: mod.rs  neuron.rs
src/training/: mod.rs
